testsuite/tests/rep-poly/RepPolyInferPatSyn.stderr

RepPolyInferPatSyn.hs:22:16: error:
    • The pattern synonym argument pattern
      does not have a fixed runtime representation.
      Its type is:
        T :: TYPE R
    • When checking that the pattern signature: T
        fits the type of its context: T
      In the pattern: a :: T
      In the declaration for pattern synonym ‘P’
